apps/keycloak/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: openldap
spec:
  selector:
    matchLabels:
      app: keycloak
      component: openldap
  serviceName: openldap
  template:
    metadata:
      labels:
        app: keycloak
        component: openldap
    spec:
      priorityClassName: high-priority
      containers:
        - name: openldap
          image: docker.io/osixia/openldap:1.5.0
          ports:
            - containerPort: 389
              name: ldap
            - containerPort: 636
              name: ldaps
          readinessProbe:
            tcpSocket:
              port: 389
            initialDelaySeconds: 5
            periodSeconds: 15
          volumeMounts:
            - mountPath: /var/lib/ldap
              name: data
            - mountPath: /etc/ldap/slapd.d
              name: config
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
        storageClassName: longhorn
    - metadata:
        name: config
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
        storageClassName: longhorn
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak-db
spec:
  selector:
    matchLabels:
      app: keycloak
      component: mariadb
  serviceName: keycloak-db
  template:
    metadata:
      labels:
        app: keycloak
        component: mariadb
    spec:
      priorityClassName: high-priority
      containers:
        - image: docker.io/library/mariadb:10.5.9
          name: mariadb
          livenessProbe:
            exec:
              command:
                - bash
                - "-c"
                - "mysqladmin --user=${MYSQL_USER} --password=${MYSQL_PASSWORD} ping"
            initialDelaySeconds: 5
            periodSeconds: 15
          ports:
            - containerPort: 3306
              name: mysql
          readinessProbe:
            exec:
              command:
                - bash
                - "-c"
                - "mysql --host=localhost --user=${MYSQL_USER} --password=${MYSQL_PASSWORD} --execute 'SELECT 1'"
            initialDelaySeconds: 5
            periodSeconds: 15
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
        storageClassName: longhorn
