apps/keycloak/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: openldap
spec:
  ports:
    - port: 389
      name: ldap
    - port: 636
      name: ldaps
  selector:
    app: keycloak
    component: openldap
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-db
spec:
  ports:
    - port: 3306
  selector:
    app: keycloak
    component: mariadb
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  ports:
    - port: 8443
  selector:
    app: keycloak
    component: keycloak
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
spec:
  ports:
    - port: 4180
  selector:
    app: keycloak
    component: oauth2-proxy
